# sqlalchemy_api

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE.txt  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  tests.yml
adapters/fastapi/: index.html
adapters/introduction/: index.html
adapters/starlette/: index.html
auth/introduction/: index.html
crud/create/: index.html
crud/delete/: index.html
crud/introduction/: index.html
crud/read/: index.html
crud/update/: index.html
crud/validation/: index.html
docs/: index.md
docs/adapters/: fastapi.md  introduction.md  starlette.md
docs/auth/: introduction.md
docs/crud/: create.md  delete.md  introduction.md  read.md  update.md  validation.md
search/: search_index.json
sqlalchemy_api/: __about__.py  actions.py  crud.py  exception_handlers.py  exceptions.py  filtering.py  pydantic_utils.py  responses.py  utils.py
sqlalchemy_api/adapters/: fastapi_crud.py  starlette_crud.py
tests/: __init__.py  conftest.py  utils.py
tests/cases/crud/: test_adapter_crud_api.py  test_crud_handler.py  test_filters_api.py
tests/cases/pydantic_utils/: test_sqlalchemy_to_pydantic.py
tests/database/: session.py
